<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dean.bigbangmk2.SingleplayerActivity">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="vertical"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rock"
            android:id="@+id/Rock"
            android:layout_marginTop="39dp"
            android:onClick="setPlayerChoice" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Paper"
            android:id="@+id/Paper"
            android:onClick="setPlayerChoice" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Scissors"
            android:id="@+id/Scissors"
            android:onClick="setPlayerChoice" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lizard"
            android:id="@+id/Lizard"
            android:onClick="setPlayerChoice" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Spock"
            android:id="@+id/Spock"
            android:onClick="setPlayerChoice" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button"
        android:id="@+id/button"
        android:onClick="playGame"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Single Player Zone: Test your skils here!"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/button"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
